--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body {
           Hello! I’m Brittany, an editor, grant writer, and writing coach based in Saint Paul, Minnesota. Since 2010, I’ve helped thousands of people from around the world meet their personal and professional writing goals. Writers work with me to improve specific skills, develop and hone ideas, receive thoughtful reader-response feedback, secure grant funding, finish doctoral work, and prepare manuscripts for publication.</p>
 
         <p class="bio">
-          To learn more about how I can help you, contact me at <a href="mailto:brittany.kallman@gmail.com">brittany.kallman@gmail.com</a> or (612) 401-0799.
+          To learn more about how I can help you, contact me at (612) 401-0799 or <a href="mailto:brittany.kallman@gmail.com">brittany.kallman@gmail.com</a>.
         </p>
         
         <div class="links w-row">
