--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
         -->
         </div>
-        <div class="credit">©2024 Brittany Kallman Arneson - <a href="https://onepagelove.com/split" target="_blank" class="credit-links">Split Template</a> by <a href="https://onepagelove.com" target="_blank" class="credit-links">One Page Love</a>
+        <div class="credit">©2024 Brittany Kallman Arneson - <a href="https://onepagelove.com/split" target="_blank" class="credit-links">Split Template</a> by One Page Love
         </div>
       </div>
     </div>
