--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@ body {
     <div class="rightcontent w-col w-col-6 w-col-stack">
       <div data-w-id="3fd5aeb3-22da-ed60-7286-0d11f16597d3" style="opacity:0" class="content">
         <div class="name">Brittany Kallman Arneson</div>
-        <h1 class="tagline"><strong class="bold-text">Editor, grant writer, and writing coach</strong></h1>
+        <h1 class="tagline"><strong class="bold-text">Editor // Grant Writer // Writing Coach</strong></h1>
 
         <p class="bio">
-          Hello! I’m Brittany, an editor, grant writer, and writing coach based in Saint Paul, Minnesota. Since 2010, I’ve helped thousands of people from around the world meet their personal and professional writing goals. Writers work with me to improve specific skills, develop and hone ideas, receive thoughtful reader-response feedback, secure grant funding, finish doctoral work, and prepare manuscripts for publication.</p>
+          Hello! I’m Brittany. Since 2010, I’ve helped thousands of people from around the world meet 
+          their personal and professional writing goals. Writers work with me to improve specific 
+          skills, develop and hone ideas, receive thoughtful reader-response feedback, secure grant 
+          funding, finish doctoral work, and prepare manuscripts for publication.</p>
 
         <p class="bio">
           To learn more about how I can help you, contact me at (612) 401-0799 or <a href="mailto:brittany.kallman@gmail.com">brittany.kallman@gmail.com</a>.
