--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
     <div class="rightcontent w-col w-col-6 w-col-stack">
       <div data-w-id="3fd5aeb3-22da-ed60-7286-0d11f16597d3" style="opacity:0" class="content">
         <div class="name">Brittany Kallman Arneson</div>
-        <h1 class="tagline"><strong class="bold-text">Editor // Grant Writer // Writing Coach</strong></h1>
+        <h1 class="tagline"><strong class="bold-text">Editor &#183; Grant Writer &#183; Writing Coach</strong></h1>
 
         <p class="bio">
           Hello! I’m Brittany. Since 2010, I’ve helped thousands of people from around the world meet 
