--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body {
           I’m Brittany. Since 2010, I’ve helped thousands of people from around the world meet 
           their personal and professional writing goals. Writers work with me to:
         </p>
-        <ul>
+        <ul class="bio">
           <li>improve specific skills,</li> 
           <li>develop and hone ideas,</li> 
           <li>receive thoughtful reader-response feedback,</li>
