--- a/index.html
+++ b/index.html
@@ -38,16 +38,9 @@ body {
         
         <p class="bio">
           I’m Brittany. Since 2010, I’ve helped thousands of people from around the world meet 
-          their personal and professional writing goals. Writers work with me to:
+          their personal and professional writing goals. Writers work with me to improve specific skills, develop and hone ideas, 
+          receive thoughtful reader-response feedback, secure grant funding, finish doctoral work, and prepare manuscripts for publication.
         </p>
-        <ul class="bio">
-          <li>improve specific skills,</li> 
-          <li>develop and hone ideas,</li> 
-          <li>receive thoughtful reader-response feedback,</li>
-          <li>secure grant funding,</li>
-          <li>finish doctoral work, and</li> 
-          <li>prepare manuscripts for publication.</li>
-        </ul>
       
         <p class="bio">
           I would love to hear from you! For a free 15 minute consultation, contact me at (612) 401-0799 or <a href="mailto:brittany.kallman@gmail.com">brittany.kallman@gmail.com</a>.
