--- a/index.html
+++ b/index.html
@@ -33,11 +33,7 @@ body {
         <h1 class="tagline">Editor &#183; Grant Writer &#183; Writing Coach</h1>
 
         <p class="bio">
-          Hello!
-        </p>
-        
-        <p class="bio">
-          I’m Brittany. Since 2010, I’ve helped thousands of people from around the world meet 
+          Hello! I’m Brittany. Since 2010, I’ve helped thousands of people from around the world meet 
           their personal and professional writing goals. Writers work with me to improve specific skills, develop and hone ideas, 
           receive thoughtful reader-response feedback, secure grant funding, finish doctoral work, and prepare manuscripts for publication.
         </p>
